fixes the width of the poster and shifts the cards to the left

--- a/src/sass/layout/_film-card-section.scss
+++ b/src/sass/layout/_film-card-section.scss
@@ -1,8 +1,3 @@
-article {
-  display: flex;
-  flex-direction: column;
-}
-
 .movie-card {
   display: flex;
   flex-wrap: wrap;
@@ -24,6 +19,7 @@ article {
     background-size: contain;
     background-position: center;
 
+    width: 280px;
     height: 402px;
     margin-bottom: 10px;
     border-radius: 5px;
@@ -57,6 +53,8 @@ article {
     &__poster {
       margin-bottom: 8px;
 
+      width: 336px;
+
       height: 455px;
     }
 
@@ -68,7 +66,8 @@ article {
 
 @media screen and (min-width: 1280px) {
   .movie-card {
-    gap: 16px;
+    justify-content: flex-start;
+    gap: 15px;
 
     &__list {
       max-width: 395px;
@@ -76,6 +75,7 @@ article {
     }
 
     &__poster {
+      width: 395px;
       height: 574px;
       margin-bottom: 12px;
       border-radius: 5px;
